--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,19 +1,28 @@
-version: 2
-
-notify:
-  webhooks:
-    - url: http://2a69cf19.ngrok.io
+version: 2.1
+parameters:
+  image-tag:
+    type: string
+    default: "latest"
+  workingdir:
+    type: string
+    default: "~/main"
+  run_build:
+    type: boolean
+    default: false
 
 jobs:
   build:
     docker:
-      - image: circleci/node:8.11-stretch-browsers
+      - image: circleci/node:<< pipeline.parameters.image-tag >>
+    environment:
+      IMAGETAG: << pipeline.parameters.image-tag >>
+    working_directory: << pipeline.parameters.workingdir >>
     steps:
-      - checkout
-      - run: exit 0
+      - run: echo "Image tag used was ${IMAGETAG}"
+      - run: echo "$(pwd) == << pipeline.parameters.workingdir >>"
 
 workflows:
-  version: 2
-  test-and-deploy:
+  build:
+    when: << pipeline.parameters.run_build >>
     jobs:
       - build
